--- a/Affichage.html
+++ b/Affichage.html
@@ -40,7 +40,7 @@
         width: 100%;
         max-width: 800px;
         border-collapse: collapse;
-        margin-top: 100px;
+        margin-top: 20px;
         background-color: #fff;
       }
 
@@ -159,76 +159,47 @@
         });
       }
 
-      // Fetch the last value from the 8th column and increment by 1
-      function getNextIDValue() {
-        const lastRecord = records[records.length - 1];
-        if (lastRecord && lastRecord.ID_Ligne) {
-          return parseInt(lastRecord.ID_Ligne) + 1;
-        }
-        return 1;  // Return 1 if no record exists
-      }
+      // Function to populate the table based on the selected first and second column values
+      function populateTable() {
+        const tableHeader = document.getElementById('tableHeader');
+        const tableBody = document.getElementById('tableBody');
 
-      // Add new row to the table and save to Grist
-      document.getElementById('addRowButton').addEventListener('click', function() {
-        // Get the values from the inputs and the dropdowns
-        const emetteur = document.getElementById('emetteurInput').value;
-        const reference = document.getElementById('referenceInput').value;
-        const indice = document.getElementById('indiceInput').value;
-        const recu = document.getElementById('recuInput').value;
-        const description = document.getElementById('descriptionInput').value;
-        const id_ligne = getNextIDValue();
+        // Clear the table
+        tableHeader.innerHTML = '';
+        tableBody.innerHTML = '';
 
-        // Step 1: Create a new record object
-        const newRecord = {
-          NomProjet: selectedFirstValue,
-          NomEtage: selectedSecondValue,
-          Emetteur: emetteur,
-          Reference: reference,
-          Indice: indice,
-          Recu: recu,
-          DescriptionObservations: description,
-          ID_Ligne: id_ligne
-        };
+        const filteredRecords = records
+          .filter(record => record.NomProjet === selectedFirstValue && record.NomEtage === selectedSecondValue);
 
-        // Step 2: Add the new record to Grist
-        grist.docApi.applyUserActions([['AddRecord', 'Fusion', newRecord]])
-        .then(() => {
-          console.log("New record added:", newRecord);
+        if (filteredRecords.length === 0) return;
 
-          // Add new record to the local records array and refresh the table
-          records.push(newRecord);
-          populateTable();
+        const exampleRecord = filteredRecords[0];
+        const headers = Object.keys(exampleRecord).filter(key => key !== 'NomProjet' && key !== 'NomEtage' && key !== 'ID_Ligne'); // Skip first two and last column (ID_Ligne)
 
-          // Clear input fields
-          document.getElementById('emetteurInput').value = '';
-          document.getElementById('referenceInput').value = '';
-          document.getElementById('indiceInput').value = '';
-          document.getElementById('recuInput').value = '';
-          document.getElementById('descriptionInput').value = '';
-        }).catch(error => {
-          console.error("Failed to add record to Grist:", error);
+        // Populate the table header
+        headers.forEach(header => {
+          const th = document.createElement('th');
+          th.textContent = header;
+          tableHeader.appendChild(th);
         });
-      });
 
-      // Fetch records from Grist
-      grist.onRecords(function(receivedRecords) {
-        console.log("Records received from Grist:", receivedRecords);
+        // Populate the table body with filtered records
+        filteredRecords.forEach((record, rowIndex) => {
+          const tr = document.createElement('tr');
+          headers.forEach(header => {
+            const td = document.createElement('td');
+            td.contentEditable = "true";  // Make cells editable
+            td.textContent = record[header] || '';  // Use empty string for null/undefined values
+            td.addEventListener('blur', function() {
+              record[header] = td.textContent; // Update record with edited value
+              updateRecordInGrist(record); // Save changes to Grist
+            });
+            tr.appendChild(td);
+          });
 
-        records = receivedRecords.map(record => ({
-          NomProjet: record.NomProjet || '',
-          NomEtage: record.NomEtage || '',
-          Emetteur: record.Emetteur || '',
-          Reference: record.Reference || '',
-          Indice: record.Indice || '',
-          Recu: record.Recu || '',
-          DescriptionObservations: record.DescriptionObservations || '',
-          ID_Ligne: record.ID_Ligne || ''
-        }));
-
-        // Populate the first dropdown with unique values from 'NomProjet'
-        const uniqueFirstColumnValues = [...new Set(records.map(record => record.NomProjet))];
-        populateFirstColumnDropdown(uniqueFirstColumnValues);
-      });
+          tableBody.appendChild(tr);
+        });
+      }
 
       // Listen to changes in the first dropdown and update the second listbox accordingly
       document.getElementById('firstColumnDropdown').addEventListener('change', function() {
@@ -243,6 +214,82 @@
       // Listen to changes in the second listbox and update the table accordingly
       document.getElementById('secondColumnListbox').addEventListener('change', function() {
         selectedSecondValue = this.value;
+        if (selectedFirstValue && selectedSecondValue) {
+          populateTable();
+        }
+      });
+
+      // Add new row to the table and save to Grist
+      document.getElementById('addRowButton').addEventListener('click', function() {
+        const blankRecord = {
+          NomProjet: selectedFirstValue,
+          NomEtage: selectedSecondValue
+        };
+
+        // Step 1: Add an empty record to Grist to obtain the new row's ID
+        grist.docApi.applyUserActions([['AddRecord', 'Fusion', {}]])  // 'Fusion' is your table name
+        .then((response) => {
+          const newID_Ligne = response[0];  // Grist returns the new row ID
+          console.log("New empty row added with ID:", newID_Ligne);
+
+          // Step 2: Create a new record with input values and the new ID_Ligne
+          const newRecord = {
+            NomProjet: selectedFirstValue,
+            NomEtage: selectedSecondValue,
+            Emetteur: document.getElementById('emetteurInput').value,
+            Reference: document.getElementById('referenceInput').value,
+            Indice: document.getElementById('indiceInput').value,
+            Recu: document.getElementById('recuInput').value,
+            DescriptionObservations: document.getElementById('descriptionInput').value,
+            ID_Ligne: newID_Ligne // Use the new ID from Grist
+          };
+
+          // Step 3: Update the newly created record in Grist with the user inputs
+          updateRecordInGrist(newRecord);
+
+          // Add new record to the list and refresh the table
+          records.push(newRecord);
+          populateTable();
+
+          // Clear input fields
+          document.getElementById('emetteurInput').value = '';
+          document.getElementById('referenceInput').value = '';
+          document.getElementById('indiceInput').value = '';
+          document.getElementById('recuInput').value = '';
+          document.getElementById('descriptionInput').value = '';
+        }).catch(error => {
+          console.error("Failed to add record to Grist:", error);
+        });
+      });
+
+      // Function to update a record in Grist
+      function updateRecordInGrist(record) {
+        grist.docApi.applyUserActions([['UpdateRecord', 'Fusion', record.ID_Ligne, record]])
+        .then(() => {
+          console.log("Record updated in Grist:", record);
+        }).catch(error => {
+          console.error("Failed to update record in Grist:", error);
+        });
+      }
+
+      // Fetch records from Grist
+      grist.onRecords(function(receivedRecords) {
+        console.log("Records received from Grist:", receivedRecords);
+        
+        records = receivedRecords.map(record => ({
+          NomProjet: record.NomProjet || '',
+          NomEtage: record.NomEtage || '',
+          Emetteur: record.Emetteur || '',
+          Reference: record.Reference || '',
+          Indice: record.Indice || '',
+          Recu: record.Recu || '',
+          DescriptionObservations: record.DescriptionObservations || '',
+          ID_Ligne: record.ID_Ligne || ''
+        }));
+
+        // Populate the first dropdown with unique values from 'NomProjet'
+        const uniqueFirstColumnValues = [...new Set(records.map(record => record.NomProjet))];
+        populateFirstColumnDropdown(uniqueFirstColumnValues);
       });
     </script>
   </body>
