--- a/Affichage.html
+++ b/Affichage.html
@@ -88,7 +88,7 @@
       <!-- First dropdown for selecting a project -->
       <label for="firstColumnDropdown">Projet :</label>
       <select id="firstColumnDropdown">
-        <option value="">Select an option</option>
+        <option value=""> </option>
       </select>
 
       <!-- Second listbox for selecting the tableau -->
