--- a/Affichage.html
+++ b/Affichage.html
@@ -80,33 +80,6 @@
         padding: 5px 10px;
         cursor: pointer;
       }
-
-      /* Context Menu Styles */
-      .context-menu {
-        display: none;
-        position: absolute;
-        background-color: #333;
-        color: white;
-        border: 1px solid #ddd;
-        z-index: 10000;
-        padding: 10px;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-      }
-
-      .context-menu button {
-        display: block;
-        background: none;
-        border: none;
-        color: white;
-        cursor: pointer;
-        padding: 5px;
-        width: 100%;
-        text-align: left;
-      }
-
-      .context-menu button:hover {
-        background-color: #444;
-      }
     </style>
   </head>
   <body>
@@ -133,11 +106,6 @@
       </table>
     </div>
 
-    <!-- Context Menu -->
-    <div id="contextMenu" class="context-menu">
-      <button id="deleteOption">Supprimer</button>
-    </div>
-
     <!-- Form to add new rows -->
     <div class="add-form">
       <h3>Ajouter une nouvelle ligne :</h3>
@@ -153,7 +121,6 @@
       let records = [];
       let selectedFirstValue = '';
       let selectedSecondValue = '';
-      let selectedRowIndex = null; // Track which row is selected
 
       // Ready Grist
       grist.ready();
@@ -219,8 +186,6 @@
         // Populate the table body with filtered records
         filteredRecords.forEach((record, rowIndex) => {
           const tr = document.createElement('tr');
-          tr.addEventListener('contextmenu', (event) => showContextMenu(event, rowIndex)); // Show context menu on right-click
-
           headers.forEach(header => {
             const td = document.createElement('td');
             td.contentEditable = "true";  // Make cells editable
@@ -236,29 +201,65 @@
         });
       }
 
-      // Show context menu on right-click
-      function showContextMenu(event, rowIndex) {
-        event.preventDefault();
-        selectedRowIndex = rowIndex; // Track which row was right-clicked
-
-        const contextMenu = document.getElementById('contextMenu');
-        contextMenu.style.display = 'block';
-        contextMenu.style.left = `${event.pageX}px`;
-        contextMenu.style.top = `${event.pageY}px`;
-      }
-
-      // Hide context menu if clicked elsewhere
-      document.addEventListener('click', function(event) {
-        const contextMenu = document.getElementById('contextMenu');
-        if (!contextMenu.contains(event.target)) {
-          contextMenu.style.display = 'none';
+      // Listen to changes in the first dropdown and update the second listbox accordingly
+      document.getElementById('firstColumnDropdown').addEventListener('change', function() {
+        selectedFirstValue = this.value;
+        if (selectedFirstValue) {
+          populateSecondColumnListbox(selectedFirstValue);
+        } else {
+          document.getElementById('secondColumnListbox').innerHTML = '';  // Clear second listbox if no selection
         }
       });
 
-      // Add event listener for "Supprimer" option
-      document.getElementById('deleteOption').addEventListener('click', function() {
-        console.log("Supprimer clicked for row index:", selectedRowIndex);
-        // Implement delete functionality here later
+      // Listen to changes in the second listbox and update the table accordingly
+      document.getElementById('secondColumnListbox').addEventListener('change', function() {
+        selectedSecondValue = this.value;
+        if (selectedFirstValue && selectedSecondValue) {
+          populateTable();
+        }
+      });
+
+      // Add new row to the table and save to Grist
+      document.getElementById('addRowButton').addEventListener('click', function() {
+        const blankRecord = {
+          NomProjet: selectedFirstValue,
+          NomEtage: selectedSecondValue
+        };
+
+        // Step 1: Add an empty record to Grist to obtain the new row's ID
+        grist.docApi.applyUserActions([['AddRecord', 'Fusion', {}]])  // 'Fusion' is your table name
+        .then((response) => {
+          const newID_Ligne = response[0];  // Grist returns the new row ID
+          console.log("New empty row added with ID:", newID_Ligne);
+
+          // Step 2: Create a new record with input values and the new ID_Ligne
+          const newRecord = {
+            NomProjet: selectedFirstValue,
+            NomEtage: selectedSecondValue,
+            Emetteur: document.getElementById('emetteurInput').value,
+            Reference: document.getElementById('referenceInput').value,
+            Indice: document.getElementById('indiceInput').value,
+            Recu: document.getElementById('recuInput').value,
+            DescriptionObservations: document.getElementById('descriptionInput').value,
+            ID_Ligne: newID_Ligne // Use the new ID from Grist
+          };
+
+          // Step 3: Update the newly created record in Grist with the user inputs
+          updateRecordInGrist(newRecord);
+
+          // Add new record to the list and refresh the table
+          records.push(newRecord);
+          populateTable();
+
+          // Clear input fields
+          document.getElementById('emetteurInput').value = '';
+          document.getElementById('referenceInput').value = '';
+          document.getElementById('indiceInput').value = '';
+          document.getElementById('recuInput').value = '';
+          document.getElementById('descriptionInput').value = '';
+        }).catch(error => {
+          console.error("Failed to add record to Grist:", error);
+        });
       });
 
       // Function to update a record in Grist
