--- a/Affichage.html
+++ b/Affichage.html
@@ -222,7 +222,7 @@
         // Populate the table body with filtered records
         filteredRecords.forEach((record, rowIndex) => {
           const tr = document.createElement('tr');
-          tr.addEventListener('contextmenu', (event) => showContextMenu(event, rowIndex, record.ID_Ligne)); // Show context menu on right-click and store the ID
+          tr.addEventListener('contextmenu', (event) => showContextMenu(event, rowIndex)); // Show context menu on right-click
 
           // Add the ID as the first column
           const idCell = document.createElement('td');
@@ -244,11 +244,14 @@
         });
       }
 
-      // Show context menu on right-click
-      function showContextMenu(event, rowIndex, recordId) {
+      // Show context menu on right-click and get the ID from the first cell
+      function showContextMenu(event, rowIndex) {
         event.preventDefault();
         selectedRowIndex = rowIndex; // Track which row was right-clicked
-        selectedRecordId = recordId;  // Store the ID of the selected record
+
+        const row = event.target.parentElement; // Get the row element
+        const idCell = row.cells[0]; // Get the first cell (ID)
+        selectedRecordId = idCell.textContent; // Store the ID from the first cell
 
         const contextMenu = document.getElementById('contextMenu');
         contextMenu.style.display = 'block';
@@ -267,7 +270,7 @@
       // Add event listener for "Supprimer" option
       document.getElementById('deleteOption').addEventListener('click', function() {
         console.log("Supprimer clicked for row ID:", selectedRecordId);
-        deleteRecordInGrist(selectedRecordId); // Delete the record using the stored ID
+        deleteRecordInGrist(selectedRecordId); // Delete the record using the ID from the first column
       });
 
       // Function to delete a record in Grist
